@@ -15,7 +15,7 @@ second:
   title: The Second Topic's of the day
   author_name: Mary
   written_on: 2003-07-15 15:28:00
-  content: Have a great day!
+  content: Have a nice day
   approved: 1
   replies_count: 2
   parent_id: 1
